# babble-note

./: .gitignore  .travis.yml  Cargo.toml  README.md  csp.js  electronMain.js  jsconflig.json  package-lock.json  package.json  work.js
babble-backend-src/: package-lock.json  package.json
babble-backend-src/native/: Cargo.toml  Migrant.toml  artifacts.json  index.node
babble-backend-src/native/migrations/20200615025736_init/: down.sql  up.sql
babble-backend-src/native/src/: lib.rs
db/: embedded_example.db
lib/: index.js
native/: Cargo.toml  artifacts.json  index.node
public/: index.html
src/: App.js  App.test.js  electronMain.js  setupTests.js  work.js
src/utils/: test-utils.js
