[package]
name = "babble-backend"
version = "0.1.0"
authors = ["Matt Bachmann <bachmann.matt@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "babble_backend"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
